# SocGen

./: CMakeLists.txt  Couleurs.h  Menu.cpp  Menu.h  Pops.cpp  Pops.h  README.md  Rotation.cpp  Rotation.h  Symetriques.cpp  Symetriques.h  Test1.cpp  exMain.txt
